bpo-44273: Improve syntax error message for assigning to "..." (GH-26477)

Use "ellipsis" instead of "Ellipsis" in syntax error messages to eliminate confusion with built-in variable Ellipsis.